--- a/index.html
+++ b/index.html
@@ -36,9 +36,16 @@
         <main>
             <h1>Welcome to MuscleMap</h1>
             <div>
-                <img src="human_body.png" alt="Image of human body">
+                <img src="human_body.png" alt="Image of human body" width="1000">
             </div>
         </main>
+        <footer class="container-fluid bg-dark text-white text-center py-4">
+            <nav class="nav justify-content-center">
+                <a class="nav-link text-white" href="index.html">Home</a>
+                <a class="nav-link text-white" href="">Login/Signup</a>
+            </nav>
+            <small class="d-block mt-3">Copyright &copy; 2025 Andy Phan, Kevin Arleen</small>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
