Centered heading and image (image is still not exactly centered).

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </div>
             </div>
         </nav>
-        <main>
-            <h1>Welcome to MuscleMap</h1>
-            <div>
+        <main class="container">
+            <h1 class="text-center my-4">Welcome to MuscleMap</h1>
+            <div class="col-md-6 text-center">
                 <img src="human_body.png" alt="Image of human body" width="1000">
             </div>
         </main>
