Updated index.html's navigation bar to direct to login.html when clicking login/signup button.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="">Login/Signup</a></li>
+                        <li class="nav-item"><a class="nav-link" href="login.html">Login/Signup</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,7 +42,7 @@
         <footer class="container-fluid bg-dark text-white text-center py-4">
             <nav class="nav justify-content-center">
                 <a class="nav-link text-white" href="index.html">Home</a>
-                <a class="nav-link text-white" href="">Login/Signup</a>
+                <a class="nav-link text-white" href="login.html">Login/Signup</a>
             </nav>
             <small class="d-block mt-3">Copyright &copy; 2025 Andy Phan, Kevin Arleen</small>
         </footer>
