Renamed login.css to login-signup.css

--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <meta property="og:site_name" content="MuscleMap">
 
         <title>MuscleMap Login</title>
-        <link rel="stylesheet" href="styles/login.css">
+        <link rel="stylesheet" href="styles/login-signup.css">
     </head>
     <body>
         <div class="main">
@@ -37,7 +37,7 @@
             </form>
             <p>
                 Not registered?
-                <a href="">Create an account</a>
+                <a href="signup.html">Create an account</a>
             </p>
         </div>
     </body>
