added link to screen 3 workout plan

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <nav class="nav justify-content-center">
                 <a class="nav-link text-white" href="index.html">Home</a>
                 <a class="nav-link text-white" href="login.html">Login/Signup</a>
+                <a class="nav-link text-white" href="workout-plan.html">Workout-Plan Screen</a>
             </nav>
             <small class="d-block mt-3">Copyright &copy; 2025 Andy Phan, Kevin Arleen</small>
         </footer>
