fixed "Track a Workout" button

--- a/workout-plan.html
+++ b/workout-plan.html
@@ -142,7 +142,7 @@
         <nav class="nav justify-content-center">
             <a class="nav-link text-white" href="index.html">Home</a>
             <a class="nav-link text-white" href="#">Edit Plan</a>
-            <a class="nav-link text-white" href="workout-tracker.html">Track a Workout</a>
+            <a class="nav-link text-white" href="workout-progress.html">Track a Workout</a>
         </nav>
         <small class="d-block mt-3">Copyright &copy; 2025 Andy Phan, Kevin Arleen</small>
     </footer>
@@ -151,7 +151,7 @@
     <script>
         document.getElementById('daySelect').addEventListener('change', function() {
             const selectedDay = this.value;
-            // In the future, implement logic here to update the tree diagram based on the selected day
+            // Implement logic here to update the tree diagram based on the selected day
             console.log("Selected day: " + selectedDay); // Placeholder functionality
         });
     </script>
