--- a/login.html
+++ b/login.html
@@ -2,42 +2,30 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Welcome to MuscleMap. A web-based interactive muscle exercise guide that allows users to explore
-        different muscle groups on a human body diagram and receive recommended exercises for strengthening and growing those muscles.">
+        <meta name="description" content="Log in to MuscleMap to save and track your workout progress.">
         <meta name="author" content="Andy Phan, Kevin Arleen">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:title" content="MuscleMap Login">
-        <meta property="og:type" content="website">
-        <meta property="og:image" content="">
-        <meta property="og:url" content="">
-        <meta property="og:description" content="A web-based interactive muscle exercise guide that allows
-        users to explore different muscle groups on a human body diagram and receive recommended exercises for
-        strengthening and growing those muscles.">
-        <meta property="og:site_name" content="MuscleMap">
-
-        <title>MuscleMap Login</title>
-        <link rel="stylesheet" href="styles/login-signup.css">
+        <title>MuscleMap - Login</title>
+        <link rel="stylesheet" href="styles/style.css">
     </head>
-    <body>
-        <div class="main">
+    <body class="auth-page">
+        <div class="auth-container">
             <h1>MuscleMap</h1>
             <h3>Enter your login credentials</h3>
 
-            <form action="">
-                <label for="first">Username:</label>
-                <input type="text" id="first" name="first" placeholder="Enter your username" required>
-
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
-
-                <div class="wrap">
-                    <button type="submit">Submit</button>
+            <form action="" method="post">
+                <div class="form-group">
+                    <label for="first">Username:</label>
+                    <input type="text" id="username" name="username" placeholder="Enter your username" required>
                 </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                </div>
+                <button type="submit" class="btn">Login</button>
             </form>
-            <p>
-                Not registered?
-                <a href="signup.html">Create an account</a>
+            <p>Don't have an account? <a href="signup.html">Sign up here</a>
             </p>
         </div>
     </body>
