--- a/signup.html
+++ b/signup.html
@@ -2,62 +2,40 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="Welcome to MuscleMap. A web-based interactive muscle exercise guide that allows users to explore
-        different muscle groups on a human body diagram and receive recommended exercises for strengthening and growing those muscles.">
+        <meta name="description" content="Sign up for MuscleMap and create your personalized workout plan.">
         <meta name="author" content="Andy Phan, Kevin Arleen">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:title" content="MuscleMap Signup">
-        <meta property="og:type" content="website">
-        <meta property="og:image" content="">
-        <meta property="og:url" content="">
-        <meta property="og:description" content="A web-based interactive muscle exercise guide that allows
-        users to explore different muscle groups on a human body diagram and receive recommended exercises for
-        strengthening and growing those muscles.">
-        <meta property="og:site_name" content="MuscleMap">
-
-        <title>MuscleMap Login</title>
-        <link rel="stylesheet" href="styles/login-signup.css">
+        <title>MuscleMap - Signup</title>
+        <link rel="stylesheet" href="styles/style.css">
     </head>
-    <body>
-        <div class="container">
+    <body class="auth-page">
+        <div class="auth-container">
             <h1>MuscleMap</h1>
-            <h3>Signup Form</h3>
+            <h3>Create a New Account</h3>
 
-            <form id="signupForm">
+            <form id="signupForm" action="" method="post">
                 <div class="form-group">
                     <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" id="username" name="username" placeholder="Choose a username" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" placeholder="Enter your email" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                    <div class="password-hint" id="passwordHint">
-                        Password must be at least 8 characters long, and include at
-                        least one uppercase letter, one lowercase letter, one
-                        number, and one special character.
-                    </div>
-                    <span id="passwordError" class="error"></span>
-                    <div class="password-strength" id="passwordStrength"></div>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" placeholder="Create a password" required>
+                    <small>Password must be at least 8 characters, including
+                        one uppercase letter, one lowercase letter, one number, and one special character.</small>
                 </div>
-
                 <div class="form-group">
-                    <label for="confirmPassword">Confirm Password</label>
-                    <input type="password" id="confirmPassword" name="confirmPassword" required>
-                    <span id="confirmPasswordError" class="error"></span>
+                    <label for="confirmPassword">Confirm Password:</label>
+                    <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
                 </div>
-                <button type="submit">Signup</button>
+                <button type="submit" class="btn">Sign Up</button>
             </form>
-            <p id="message"></p>
-
-            <p>
-                Already have an account?
-                <a href="login.html">Log In</a>
-            </p>
+            <p>Already have an account? <a href="login.html">Login Here</a></p>
         </div>
     </body>
 </html>
