--- a/workout-plan.html
+++ b/workout-plan.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Andy Phan, Kevin Arleen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MuscleMap - Workout Plan</title>
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         .tree {
@@ -142,7 +143,7 @@
         <nav class="nav justify-content-center">
             <a class="nav-link text-white" href="index.html">Home</a>
             <a class="nav-link text-white" href="#">Edit Plan</a>
-            <a class="nav-link text-white" href="workout-progress.html">Track a Workout</a>
+            <a class="nav-link text-white" href="workout-tracker.html">Track a Workout</a>
         </nav>
         <small class="d-block mt-3">Copyright &copy; 2025 Andy Phan, Kevin Arleen</small>
     </footer>
@@ -151,7 +152,7 @@
     <script>
         document.getElementById('daySelect').addEventListener('change', function() {
             const selectedDay = this.value;
-            // Implement logic here to update the tree diagram based on the selected day
+            // In the future, implement logic here to update the tree diagram based on the selected day
             console.log("Selected day: " + selectedDay); // Placeholder functionality
         });
     </script>
