Added contributions in comment

--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!-- Hosted on CS4640 server: https://cs4640.cs.virginia.edu/tmq6ed/musclemap/index.html-->
+<!--
+Hosted on CS4640 server: https://cs4640.cs.virginia.edu/tmq6ed/musclemap/index.html
+Andy Phan's Contributions: index.html, login.html, signup.html, exercise.html, style.css
+Kevin Arleen's Contributions: workout-plan.html, workout-tracker.html
+-->
 
 <!DOCTYPE html>
 <html lang="en">
