removed index.html from comment

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-Hosted on CS4640 server: https://cs4640.cs.virginia.edu/tmq6ed/musclemap/index.html
+Hosted on CS4640 server: https://cs4640.cs.virginia.edu/tmq6ed/musclemap/
 Andy Phan's Contributions: index.html, login.html, signup.html, exercise.html, style.css
 Kevin Arleen's Contributions: workout-plan.html, workout-tracker.html
 -->
