Made copyright white

--- a/exercise.html
+++ b/exercise.html
@@ -98,7 +98,7 @@
                 <a class="nav-link text-white" href="index.html">Home</a>
                 <a class="nav-link text-white" href="login.html">Login/Signup</a>
             </nav>
-            <small class="d-block mt-3">Copyright &copy; 2025 Andy Phan, Kevin Arleen</small>
+            <small class="d-block mt-3 text-white">Copyright &copy; 2025 Andy Phan, Kevin Arleen</small>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
